added concrete repository

--- a/TE4-Demo-Repository/TE4-Demo-Repository.csproj
+++ b/TE4-Demo-Repository/TE4-Demo-Repository.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="DomainModel\Abstract\IRepository.cs" />
     <Compile Include="DomainModel\Concrete\Car.cs" />
+    <Compile Include="DomainModel\Concrete\Repository.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
